--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.11.1",
     "next": "^10.0.0",
     "node-sass": "^4.14.1",
