--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.9.4",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.11.1",
     "next": "^10.0.0",
