--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "antd": "^4.9.4",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.11.1",
+    "dva": "^2.4.1",
     "next": "^10.0.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2"
   }
 }
