--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
@@ -14,6 +14,8 @@
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.11.1",
     "dva": "^2.4.1",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "next": "^10.0.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
